<resources>
    <string name="app_name">EcommerceProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="create_an_account">Create An Account</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="agree_to_the">Agree_to_the</string>
    <string name="forget_password">Forget password?</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
</resources>